syntax = "proto3";

package user;

option go_package = "./proto;user";

message GetUserRequest {
  string auth0_id = 1;
  string email = 2;
}

message GetUserResponse {
  string auth0_id = 1;
  string email = 2;
  bool exists = 3;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}
